[package]
name = "reddit-downloader-rust"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = "2.33.3"
base64 = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
