[package]
name = "subreddit-downloader"
version = "1.0.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
base64 = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
