[package]
name = "subreddit-downloader"
version = "1.0.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
tokio = { version = "1.8.1", features = ["full"] }
futures = "0.3.15"
once_cell = "1.8.0"
parking_lot = "0.11.1"
clap = "2.33.3"
base64 = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
